--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
 .container{
 	width:200px;
-	background-color:#800080;
+	background-color:purple;
 	padding:10px;
 	font-size:20px;
 	border-left:5px solid green;    
-	
-}
-.container {
 	color:white;
 	text-decoration:underline;
+	
 }
+
 /* Your CSS Code here. */
