--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,10 @@
 	background-color:purple;
 	padding:10px;
 	font-size:20px;
-	border-left:5px solid green;    
+	
+	border-left-width:5px;
+	border-left-color:green;
+	border-style:solid;
 	color:white;
 	text-decoration:underline;
 	
