--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 	
 	border-left-width:5px;
 	border-left-color:green;
-	border-style:solid;
+	border-left-style:solid;
 	color:white;
 	text-decoration:underline;
 	
