--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,7 @@
 	padding:10px;
 	font-size:20px;
 	
-	border-left-width:5px;
-	border-left-color:green;
-	border-left-style:solid;
+	border-left:5px solid green;
 	color:white;
 	text-decoration:underline;
 	
