--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
-.container>h4{
+section>div{
 	width:200px;
 	background-color:purple;
 	padding:10px;
 	font-size:20px;
 	
-	border-left:10px solid green;
+	border-left:5px solid green;
 	color:white;
-	text-decoration:underline;
+	
 	
 }
 
