--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
-container>div{
-	width:200px;
-	background-color:purple;
-	padding:10px;
-	font-size:20px;
-	
-	border-left:5px solid green;
-	color:white;
-	
-	
-}
+ .main{
+            width: 200px;
+            background-color: rgb(128, 0, 128);
+            border-left-width: 5px;
+            border-left-style: solid;
+            border-left-color: rgb(0, 128, 0);
+            padding : 10px;
+        }
+        h1{
+            font-size: 20px;
+            color: rgb(255, 255, 255);
+        }
 
 /* Your CSS Code here. */
