--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
  .main{
             width: 200px;
-            background-color: rgb(128, 0, 128);
+            background-color: purple;
             border-left-width: 5px;
             border-left-style: solid;
-            border-left-color: rgb(0, 128, 0);
+            border-left-color: green;
             padding : 10px;
         }
         h1{
             font-size: 20px;
-            color: rgb(255, 255, 255);
+            color: white;
         }
 
 /* Your CSS Code here. */
