--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,10 @@
  .main{
             width: 200px;
             background-color: purple;
-            border-left-width: 5px;
-            border-left-style: solid;
-            border-left-color: green;
+            border-left:5px solid green;
             padding : 10px;
         }
-        h1{
+h1{
             font-size: 20px;
             color: white;
         }
